# serial_downloader

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  sdl.spec
src/: sdl.py
tests/: test_sdl.py
tests/assets/: serial_list_zf1.pkl  serial_list_zf2.pkl  serial_list_zf3.pkl  url_list.pkl
