[tool.poetry]
name = "serial_downloader"
version = "0.1.0"
description = "Download files with serial numbers at once."
authors = ["lv0jp"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
